<resources>
    <string name="app_name">AP Computer Science Quiz</string>
    <string name="recursion">Recursion</string>
    <string name="binary_search_and_sorting">Binary search and Sorting</string>
    <string name="strings">Strings</string>
    <string name="loops">Loops</string>
    <string name="_1_d_and_2_d_arrays">1-D and 2-D Arrays</string>
    <string name="fields_methods_parameters">Fields, methods, parameters</string>
    <string name="algorithm_and_big_o">Algorithm and Big-o</string>
    <string name="classes_interface_inheritance_polymorphism">Classes, interface, inheritance, polymorphism</string>
    <string name="array_list_and_linked_list">Array List and Linked List</string>
    <string name="arithmetic_and_boolean">Arithmetic and Boolean</string>
    <string name="first_question">first question</string>
    <string name="e">E</string>
    <string name="d">D</string>
    <string name="textview">TextView</string>
    <string name="finish">Finish</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
</resources>
