<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="346dp"
        android:layout_height="413dp"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/ab"
                android:layout_width="170dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:fontFamily="casual"
                android:text="@string/arithmetic_and_boolean"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="63dp" />

            <Button
                android:id="@+id/al"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:fontFamily="casual"
                android:text="@string/array_list_and_linked_list"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="63dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/ao"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:fontFamily="casual"
                android:text="@string/algorithm_and_big_o"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="63dp" />

            <Button
                android:id="@+id/ar"
                android:layout_width="170dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:fontFamily="casual"
                android:text="@string/_1_d_and_2_d_arrays"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="63dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/c"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:fontFamily="casual"
                android:text="@string/classes_interface_inheritance_polymorphism"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="63dp" />

            <Button
                android:id="@+id/f"
                android:layout_width="170dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:fontFamily="casual"
                android:text="@string/fields_methods_parameters"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="63dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/lo"
                android:layout_width="170dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:fontFamily="casual"
                android:text="@string/loops"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="63dp" />

            <Button
                android:id="@+id/r"
                android:layout_width="170dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:fontFamily="casual"
                android:text="@string/recursion"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="63dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/s"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:fontFamily="casual"
                android:text="@string/strings"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="63dp" />

            <Button
                android:id="@+id/ss"
                android:layout_width="170dp"
                android:layout_height="80dp"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:fontFamily="casual"
                android:text="@string/binary_search_and_sorting"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="96dp"
                tools:layout_editor_absoluteY="63dp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="163dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="28dp"
        android:fontFamily="casual"
        android:text="QUIZ TIME!"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exit"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="59dp"
        android:layout_height="37dp"
        android:layout_marginEnd="164dp"
        android:layout_marginStart="143dp"
        android:background="?android:attr/panelBackground"
        android:elevation="0dp"
        android:fontFamily="casual"
        android:onClick="cancel"
        android:text="Exit"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</android.support.constraint.ConstraintLayout>